# qwebyast

./: AUTHORS  CMakeLists.txt  README  VERSION.cmake  qwebyast  qwebyast.spec.in
icons/: CMakeLists.txt
package/: qwebyast.changes
src/: CMakeLists.txt  app.cpp  app.h  chrome-webyast.desktop  chromium-webyast.desktop  constants.h  main.cpp  qwebyast-autostart.desktop  qwebyast.desktop  webyast.sh  yast.cpp  yast.h
