
install( FILES
   qwebyast-enabled.png
   qwebyast-disabled.png

   DESTINATION  /usr/share/icons/hicolor/32x32/apps/qwebyast/pics
)

install( FILES
   qwebyast16.png
   DESTINATION  /usr/share/icons/hicolor/16x16/apps RENAME qwebyast.png
)

install( FILES
   qwebyast32.png
   DESTINATION  /usr/share/icons/hicolor/32x32/apps RENAME qwebyast.png
)

install( FILES
   qwebyast48.png
   DESTINATION  /usr/share/icons/hicolor/48x48/apps RENAME qwebyast.png
)

install( FILES
   qwebyast.png
   DESTINATION  /usr/share/pixmaps
)






